--- a/RichEditorView/Assets/editor/rich_editor.html
+++ b/RichEditorView/Assets/editor/rich_editor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
     <head>
         <meta name="viewport" content="user-scalable=no">
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -12,8 +12,7 @@
             <hr style="height:1px;border:none;border-top:1px dashed #ababab;" />
         </div>
         <div id="editor" contentEditable="true" placeholder="" class="placeholder"></div>
-        <script type="text/javascript" src="rich_editor.js"></script>
-        <script type="text/javascript" src="jQuery.js"></script>
+        <script type="text/javascript" src="./jQuery.js"></script>
+        <script type="text/javascript" src="./rich_editor.js"></script>
     </body>
 </html>
-
